<resources>
    <string name="app_name">Student Information</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_student">Update Student</string>
    <string name="add_student">Add Student</string>
</resources>
